--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
     "params":
     {
-        "server":"True",
-        "local_uri":"mysql://root:@localhost/my blog",
-        "production_uri":"mysql://root:@localhost/my blog"
-
-
-
+    "local_server":"True",
+    "local_uri": "mysql://root:@localhost/my blog",
+    "production_uri":"mysql://root:@localhost/my blog",
+    "tw_url":"https://twitter.com/Neeraj9271",
+    "gh_url": "https://github.com/neeraj779",
+    "blog_name": "Neeraj's blog",
+    "tag_line": "Heaven for programmers",
+    "about_text": "Hi my name is Neeraj Boy trying to Figure-Out Stuff"
     }
 }
