added email sending server

--- a/config.json
+++ b/config.json
@@ -4,10 +4,12 @@
     "local_server":"True",
     "local_uri": "mysql://root:@localhost/my blog",
     "production_uri":"mysql://root:@localhost/my blog",
-    "tw_url":"https://twitter.com/Neeraj9271",
-    "gh_url": "https://github.com/neeraj779",
+    "twitter_url":"https://twitter.com/Neeraj9271",
+    "github_url": "https://github.com/neeraj779",
     "blog_name": "Neeraj's blog",
     "tag_line": "Heaven for programmers",
-    "about_text": "Hi my name is Neeraj Boy trying to Figure-Out Stuff"
+    "about_text": "Hi my name is Neeraj Boy trying to Figure-Out Stuff",
+    "gmail_id": "your-gmail@gmail.com",
+    "gmail_password": "yourpassword"
     }
 }
