--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "github_url": "https://github.com/neeraj779",
     "blog_name": "Neeraj's blog",
     "tag_line": "Heaven for programmers",
-    "about_text": "Hi my name is Neeraj Boy trying to Figure-Out Stuff",
+    "about_text": "Hi my name is Neeraj, A Boy trying to Figure-Out Stuff",
     "gmail_id": "your-gmail@gmail.com",
     "gmail_password": "yourpassword"
     }
